objects/vlocity_cmt__ProductChildItem__c.object
<CustomObject>
    <description>Product Child Items define the component products associated with a grouped package of products or services. Sometimes products are grouped to accommodate specialized pricing. The child items are automatically added to the cart when the parent product is added, so child items are always created when products are sold together. May represent the make up of product offerings, product specifications, resources specifications or service specifications.</description>
    <fields>
        <fullName>vlocity_cmt__ChildLineNumber__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChildProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Child Items (Child)</relationshipLabel>
        <relationshipName>ProductChildItemsChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CollapseHierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to identify if the child products below this level should be collapsed or expanded.</description>
        <label>Collapse Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Product Chlld Item. Used to identify the Product Chlld Item across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Product Chlld Item identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRootProductChildItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to identify the root product child item record.
Only one will be allowed for each root product.</description>
        <label>Is Root Product Child Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsVirtualItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxQuantity__c</fullName>
        <defaultValue>99999</defaultValue>
        <description>Maximum quantity for this product in the line item</description>
        <label>Max Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaximumChildItemQuantity__c</fullName>
        <defaultValue>99999</defaultValue>
        <label>Max Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinMaxDefaultQty__c</fullName>
        <formula>TEXT(vlocity_cmt__MinQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_cmt__MaxQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_cmt__Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min, Max, Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum quantity for this product in the line item.</description>
        <label>Min Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinimumChildItemQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Child Items</relationshipLabel>
        <relationshipName>ProductChildItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <label>RelationshipType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Realization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SelectionMethodImplementation__c</fullName>
        <label>Selection Method Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SeqNumber__c</fullName>
        <formula>VALUE(vlocity_cmt__ChildLineNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SeqNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Child Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Child Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Child Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__ChildProductNonAssetizeRule</fullName>
        <active>true</active>
        <description>Non Assetizable Product can only have Non Assetizable children</description>
        <errorConditionFormula>(vlocity_cmt__ParentProductId__r.vlocity_cmt__IsNotAssetizable__c &amp;&amp;  !vlocity_cmt__ChildProductId__r.vlocity_cmt__IsNotAssetizable__c )</errorConditionFormula>
        <errorMessage>Cannot add Assetizable Child Product to a Non Assetizable Parent Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Default_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__Quantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Default_greater_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinQuantity__c  &gt;  vlocity_cmt__Quantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Default_less_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__Quantity__c  &gt;  vlocity_cmt__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Max_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MaxQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Max_less_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MaxQuantity__c  &lt;  vlocity_cmt__MinQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Min_child_greater_than_Max_child_item</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinimumChildItemQuantity__c &gt;  vlocity_cmt__MaximumChildItemQuantity__c</errorConditionFormula>
        <errorMessage>Min Children Quantity must be less than or equal to Max Children Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Min_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Min_greater_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__MinQuantity__c  &gt;  vlocity_cmt__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__ParentProduct_cannot_be_ChildProduct</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__ParentProductId__c == vlocity_cmt__ChildProductId__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ChildProductId__c</errorDisplayField>
        <errorMessage>Parent Product cannot be added as Child Product</errorMessage>
    </validationRules>
</CustomObject>